--- a/src/index.css
+++ b/src/index.css
@@ -12,19 +12,26 @@ html {
 
     /* Colors */
     --text-primary-color: black;
-    --text-secondary-color: rgb(112, 119, 115);
+    --text-secondary-color: #707773;
+    --text-button-color: whitesmoke;
     --background: whitesmoke;
+    --background-button: whitesmoke;
+    --shadow: rgba(0, 0, 0, 0.1);
+    --highlight: white;
 }
 
 /* Dark mode */
 html.dark {
     --text-primary-color: whitesmoke;
-    --text-secondary-color: rgb(112, 119, 115);
+    --text-secondary-color: #707773;
+    --text-button-color: #121213;
     --background: #121213;
+    --background-button: #2f2f30;
+    --shadow: rgba(0, 0, 0, 0.4);
+    --highlight: #5353557e;
 }
 
-html,
-body {
+html {
     position: absolute;
     left: 0;
     top: 0;
@@ -38,9 +45,20 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 h1 {
     font-size: var(--font-size-large);
 }
+
 h2 {
     color: var(--text-secondary-color);
     font-size: var(--font-size-medium);
@@ -68,4 +86,91 @@ div.horizontal-orientation {
 div.center-content {
     justify-content: center;
     align-items: center;
+}
+
+div.stretch {
+    flex-grow: 1;
+}
+
+
+
+/* Components */
+game-card {
+    --image-size: 60%;
+
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
+    user-select: none;
+
+    min-width: 240px;
+    width: 30%;
+    max-width: 300px;
+    min-height: 200px;
+    height: 50%;
+    max-height: 500px;
+
+    margin: 1em;
+    padding: 0;
+    border-radius: 1em;
+    color: var(--text-button-color);
+    background: var(--background-button);
+    box-shadow:
+        0 0.25em 1em var(--shadow),
+        0 2px 4px var(--shadow),
+        0 -1px 2px inset var(--shadow),
+        0 1px 1px inset var(--highlight);
+    transition: transform 0.6s ease;
+}
+
+game-card>.image {
+    position: absolute;
+    width: 100%;
+    height: var(--image-size);
+    overflow: hidden;
+}
+
+game-card>.image>img {
+    height: 100%;
+    width: 100%;
+    transition: 0.6s ease;
+    object-fit: cover;
+}
+
+game-card>.title {
+    position: absolute;
+    top: calc(var(--image-size) - 1.25em);
+    width: 100%;
+    font-size: var(--font-size-large);
+    font-weight: 700;
+    text-shadow:
+        0 1px 5px #00000075,
+        0 3px 16px #00000075;
+    text-align: center;
+    display: block;
+    color: whitesmoke;
+    text-transform: uppercase;
+    transition: transform 0.6s ease;
+}
+
+game-card>.content {
+    margin-top: var(--image-size);
+    flex-grow: 1;
+    background: red;
+}
+
+/* Card hover effect */
+game-card:hover {
+    transform: scale(1.05);
+    transition: transform 0.4s ease;
+}
+
+game-card:hover>.image>img {
+    transform: scale(1.05);
+    filter: brightness(1.02) contrast(1.3)
+}
+
+game-card:hover>.title {
+    transition: transform 0.4s ease;
+    transform: scale(1.1) translateY(0.15em);
 }
