--- a/src/index.css
+++ b/src/index.css
@@ -359,34 +359,31 @@ modal-window.hide>.window {
     opacity: 0;
 }
 
-modal-window>.window>* {
-    padding: 1em;
-}
-
 modal-window>.window>.title {
     display: flex;
     flex-direction: row;
+    align-items: stretch;
 }
 
-modal-window>.window>.title>span {
+modal-window>.window>.title>.title {
     flex-grow: 1;
     text-align: center;
+    line-height: 1em;
+    font-size: 1em;
+    padding: 0.1em;
+    border: none;
+    outline: none;
+    background: none;
 }
 
 modal-window>.window>.title>.icon {
     padding: 1em;
-    margin-top: -1em;
-    margin-left: -1em;
-    margin-bottom: -1em;
     width: 1rem;
     height: 1rem;
     display: block;
 }
 
 modal-window>.window>.title>button.x {
-    margin-top: -1em;
-    margin-right: -1em;
-    margin-bottom: -1em;
     padding: 1em;
     font-size: 1rem;
     line-height: 1rem;
@@ -404,4 +401,8 @@ modal-window>.window>.title>button.x:hover {
 
 modal-window>.window>.title>button.x:active {
     color: #ff7f9f;
+}
+
+modal-window>.window>.content {
+    padding: 1em;
 }
