Add button component

--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -1,6 +1,11 @@
 <main class="main">
   <h1>Score Counter</h1>
-  
+  <div class="scores">
+    <app-button [text]="'Mattias'" [separator]="true">6</app-button>
+    <app-button [text]="'Pettersson'" [separator]="true">3</app-button>
+    <app-button [text]="'Niko'" [separator]="true">-7</app-button>
+    <app-button [text]="'Oscar'" [separator]="true">42</app-button>
+  </div>
 </main>
 
 <router-outlet />
