--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -1,10 +1,7 @@
 <main class="main">
   <h1>Score Counter</h1>
   <div class="scores">
-    <app-score-row [name]="'Mattias'" [score]="7"/>
-    <app-score-row [name]="'Pettersson'" [score]="3"/>
-    <app-score-row [name]="'Niko'" [score]="-99"/>
-    <app-score-row [name]="'Oscar'" [score]="42" [highlight]="true"/>
+    <app-match [players]="players"></app-match>
   </div>
 </main>
 
