--- a/score-counter-client/src/app/app.component.scss
+++ b/score-counter-client/src/app/app.component.scss
@@ -6,3 +6,30 @@
   flex-grow: 1;
   flex-shrink: 1;
 }
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  box-shadow: 0 5px 10px var(--shadow);
+  padding: 0.25em;
+  overflow: auto;
+  gap: 0.25em;
+  z-index: 1;
+}
+
+.scores {
+  padding: 0.5em;
+}
+
+@media (min-width: 600px) {
+  .main {
+    flex-direction: row;
+    align-items: stretch;
+  }
+
+  .menu {
+    flex-direction: column;
+    box-shadow: 0 5px 10px var(--shadow-hard), 0 12px 30px var(--shadow);
+  }
+}
