--- a/score-counter-client/src/app/match/match.component.scss
+++ b/score-counter-client/src/app/match/match.component.scss
@@ -38,5 +38,16 @@
         padding-top: 3px;
         margin-top: 2px;
         backdrop-filter: blur(12px);
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: var(--highlight);
+            opacity: 0.5;
+        }
     }
 }
