--- a/score-counter-client/src/app/score-row/score-row.component.html
+++ b/score-counter-client/src/app/score-row/score-row.component.html
@@ -1,3 +1,5 @@
 <app-button [text]="name" [separator]="true">
     <span class="score" [class.highlight]="highlight">{{score}}</span>
 </app-button>
+
+<ng-content></ng-content>
