--- a/score-counter-client/src/app/match/match.component.scss
+++ b/score-counter-client/src/app/match/match.component.scss
@@ -51,3 +51,18 @@
         }
     }
 }
+
+
+// Modal
+app-modal {
+    .modal-title {
+        flex-grow: 1;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+        font-size: 1.5em;
+        line-height: 1.5em;
+        align-self: center;
+        font-weight: 100;
+    }
+}
