--- a/score-counter-client/src/app/match/match.component.scss
+++ b/score-counter-client/src/app/match/match.component.scss
@@ -64,5 +64,9 @@ app-modal {
         line-height: 1.5em;
         align-self: center;
         font-weight: 100;
+        border: none;
+        outline: none;
+        background: none;
+        font-family: Arial, Helvetica, sans-serif;
     }
 }
