--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -5,7 +5,7 @@
     <app-button [text]="'Settings'"/>
   </div>
   <div class="scores">
-    <app-match [players]="players"></app-match>
+    <app-match [players]="players" [matchData]="matchData"></app-match>
   </div>
 </main>
 
