Create billiards view

--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -1,12 +1,13 @@
 <main class="main">
-  <div class="menu">
+    <app-billiards-view></app-billiards-view>
+  <!-- <div class="menu">
     <app-button [text]="'Home'"/>
     <app-button [text]="'Statistics'"/>
     <app-button [text]="'Settings'"/>
   </div>
   <div class="scores">
     <app-match [players]="players" [matchData]="matchData"></app-match>
-  </div>
+  </div> -->
 </main>
 
 <router-outlet />
