--- a/score-counter-client/src/components/billiards-view/billiards-view.component.html
+++ b/score-counter-client/src/components/billiards-view/billiards-view.component.html
@@ -67,6 +67,7 @@
         [size]="size * 10"
         [number]="4"
         [color]="'#622bc2'"
+        [enabled]="false"
       ></app-billiards-ball>
       <app-billiards-ball
         [size]="size * 10"
@@ -78,6 +79,7 @@
         [size]="size * 10"
         [number]="6"
         [color]="'#0d7051'"
+        [enabled]="false"
       ></app-billiards-ball>
     </div>
     <div class="row" [style.fontSize.px]="size">
@@ -90,6 +92,7 @@
         [size]="size * 10"
         [number]="3"
         [color]="'#e03131'"
+        [enabled]="false"
       ></app-billiards-ball>
     </div>
     <div class="row" [style.fontSize.px]="size">
@@ -97,6 +100,7 @@
         [size]="size * 10"
         [number]="1"
         [color]="'#ffc012'"
+        [enabled]="false"
       ></app-billiards-ball>
     </div>
   </div>
