--- a/score-counter-client/src/components/billiards-ball/billiards-ball.component.scss
+++ b/score-counter-client/src/components/billiards-ball/billiards-ball.component.scss
@@ -54,6 +54,8 @@
     line-height: 1em;
     font-weight: 900;
     font-family: "Times New Roman", Times, serif;
+    mix-blend-mode: color-burn;
+    opacity: 0.7;
   }
 }
 
