Add monitor 9-ball data

--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main class="main">
-    <app-billiards-view></app-billiards-view>
+  <app-billiards-view />
+
   <!-- <div class="menu">
     <app-button [text]="'Home'"/>
     <app-button [text]="'Statistics'"/>
