--- a/score-counter-client/src/components/billiards-view/billiards-view.component.html
+++ b/score-counter-client/src/components/billiards-view/billiards-view.component.html
@@ -42,66 +42,21 @@
     <div class="hole-model"></div>
   </div>
 
+  @if(rows) {
+
   <div class="balls" [style.fontSize.px]="size">
+    @for (row of rows; track $index) {
     <div class="row" [style.fontSize.px]="size">
+      @for (ball of row; track $index) {
       <app-billiards-ball
         [size]="size * 10"
-        [number]="5"
-        [color]="'#fa802a'"
-      ></app-billiards-ball>
+        [number]="ball?.number"
+        [color]="ball?.color"
+        [colorFill]="ball?.fill ?? true"
+      />
+      }
     </div>
-    <div class="row" [style.fontSize.px]="size">
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="7"
-        [color]="'#700d26'"
-      ></app-billiards-ball>
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="8"
-        [color]="'#05071a'"
-      ></app-billiards-ball>
-    </div>
-    <div class="row" [style.fontSize.px]="size">
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="4"
-        [color]="'#622bc2'"
-        [enabled]="false"
-      ></app-billiards-ball>
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="9"
-        [colorFill]="false"
-        [color]="'#ffc012'"
-      ></app-billiards-ball>
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="6"
-        [color]="'#0d7051'"
-        [enabled]="false"
-      ></app-billiards-ball>
-    </div>
-    <div class="row" [style.fontSize.px]="size">
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="2"
-        [color]="'#4340de'"
-      ></app-billiards-ball>
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="3"
-        [color]="'#e03131'"
-        [enabled]="false"
-      ></app-billiards-ball>
-    </div>
-    <div class="row" [style.fontSize.px]="size">
-      <app-billiards-ball
-        [size]="size * 10"
-        [number]="1"
-        [color]="'#ffc012'"
-        [enabled]="false"
-      ></app-billiards-ball>
-    </div>
+    }
   </div>
+  }
 </div>
