--- a/score-counter-client/src/components/billiards-ball/billiards-ball.component.scss
+++ b/score-counter-client/src/components/billiards-ball/billiards-ball.component.scss
@@ -11,15 +11,34 @@
     inset 0 0 0.15em #17300f;
   user-select: none;
   transition: transform 0.5s ease;
-  
+
   &:hover {
-    transform: scale(1.15) translateY(-0.05em);
-    z-index: 1;
+    transform: scale(1.15);
+    z-index: 2;
     transition: transform 0.1s ease-out;
   }
-  &:active {
-    transform: scale(1.1);
-    transition: transform 0.05s ease-out;
+
+  &.fade {
+    opacity: 0.9;
+    filter: grayscale(0.5) contrast(0.8);
+    outline: 2px solid rgba(0, 0, 0, 0.301);
+    outline-offset: -1px;
+    pointer-events: none;
+    z-index: 1;
+  }
+
+  &.highlight {
+    --glow: #0066ff;
+    transform: scale(1.3);
+    z-index: 1;
+    opacity: 1;
+    filter: brightness(1.1) contrast(1.1);
+    outline: 1px solid rgba(0, 0, 0, 0.301);
+    outline-offset: -0.5px;
+    pointer-events: none;
+    box-shadow: 0 0 0.25em var(--glow), 0 0 1em var(--glow),
+      inset 0 0 0.25em var(--glow);
+    transition: transform 0.15s ease-out;
   }
 
   &:not(.enabled) {
@@ -28,6 +47,7 @@
     outline: 2px solid black;
     outline-offset: -1px;
     pointer-events: none;
+    z-index: 0;
   }
 }
 
