Change billiards size calculations to use available host size instead of window

--- a/score-counter-client/src/components/billiards-view/billiards-view.component.html
+++ b/score-counter-client/src/components/billiards-view/billiards-view.component.html
@@ -1,4 +1,4 @@
-<div class="outside" (click)="onClickOutside()"></div>
+<div #outside class="outside" (click)="onClickOutside()"></div>
 
 <div
   class="view"
