--- a/score-counter-client/src/app/app.component.html
+++ b/score-counter-client/src/app/app.component.html
@@ -1,5 +1,19 @@
 <main class="main">
-  <app-billiards-view />
+  <div class="game-layout">
+    <h1>Round 1</h1>
+    <div class="player">
+      <input class="name" value="Oscar" />
+      <p class="score">999</p>
+    </div>
+    <button class="end-round">
+      <span class="label">End round</span>
+      <span class="icon">✓</span>
+    </button>
+
+    <div class="game-view">
+      <app-billiards-view />
+    </div>
+  </div>
 
   <!-- <div class="menu">
     <app-button [text]="'Home'"/>
