--- a/score-counter-client/src/app/app.component.scss
+++ b/score-counter-client/src/app/app.component.scss
@@ -1,6 +1,7 @@
 :host,
 .main,
-.scores {
+.scores,
+.game-layout {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -34,10 +35,97 @@
   }
 }
 
-app-billiards-view {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+.game-layout {
+  flex-grow: 1;
+  align-items: center;
+
+  & > .game-view {
+    flex-grow: 1;
+    height: 0;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: stretch;
+    align-items: stretch;
+
+    & > * {
+      margin: 1rem;
+      flex-grow: 1;
+      overflow: hidden;
+    }
+  }
+
+  & > h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 3rem;
+    padding-top: 0.5rem;
+  }
+
+  & > .player {
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    & > * {
+      border: none;
+      outline: none;
+      background: transparent;
+      color: var(--color);
+      padding: 0.5rem;
+      font-size: 1.5rem;
+      margin: 0;
+      width: 0px;
+      min-width: unset;
+      max-width: unset;
+      flex-grow: 1;
+    }
+
+    & > .name {
+      text-align: right;
+      line-height: 1em;
+    }
+
+    & > .score {
+      user-select: none;
+      text-align: left;
+      font-size: 1.8rem;
+      font-weight: 900;
+      line-height: 1em;
+    }
+  }
+  & > .end-round {
+    margin: auto;
+    padding: 0.6em 1em;
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    border-radius: 0.5em;
+    color: var(--text-primary-color);
+    background-color: var(--background-button);
+    transition: 0.4s ease-out;
+    outline: 2px solid transparent;
+
+    & > .label {
+      margin-right: 1ch;
+    }
+    & > .icon {
+      font-weight: 900;
+    }
+
+    &:hover {
+      color: limegreen;
+      background-color: var(--background-button-hover);
+      outline-color: #32cd3271;
+      transition: 0.2s ease-out;
+    }
+    &:active {
+      background-color: var(--background-button-click);
+      outline-color: #32cd32be;
+      transition: 0s;
+    }
+  }
 }
